2000-11-07  Richard Henderson  <rth@redhat.com>

	* config/ia64/fde-glibc.c (find_fde_for_dso): Do a binary
	search on the unwind region section.

	* config/ia64/ia64.md (movbi): Add r/r alternative.
	(cmovdi_internal_astep): Describe all combinations of register
	classes for sources & destinations; remove matching constraints.
	(cmovdi_internal): Likewise.

	* gcc.c (default_compilers) [@cpp-output]: Add -fpreprocessed.

2000-11-07  Richard Henderson  <rth@redhat.com>

	* c-lang.c (start_cdtor, finish_cdtor): New functions.
	(finish_file): Use them in building constructor/destructor functions.

	* config/alpha/alpha.h (HAS_INIT_SECTION, LD_INIT_SWITCH, 
	LD_FINI_SWITCH): Move ...
	* config/alpha/osf.h: ... here.
	* config/alpha/alpha-interix.h: Don't undef them.

2000-11-07  Jeffrey Oldham  <oldham@oz.codesourcery.com>

	* config/mips/t-iris6 (FPBIT): New.  Added so that __unorddf2 is
	included in libgcc.a.
	(DPBIT): Likewise.
	(dp-bit.c): Likewise.
	(fp-bit.c): Likewise.

2000-11-07  Nick Clifton  <nickc@redhat.com>

	* config/m88k/m88k.h (GLOBAL_ASM_OP): Add missing tab.
	(INTERNAL_ASM_OP): Add missing tab.

2000-11-07  Joseph S. Myers  <jsm28@cam.ac.uk>

	* alias.c (init_alias_analysis), calls.c (expand_call,
	emit_library_call_value_1), combine.c (init_reg_last_arrays),
	cse.c (new_basic_block), dbxout.c (dbxout_type), diagnostic.c
	(init_output_buffer, set_diagnostic_context), dwarf2out.c
	(equate_decl_number_to_die, build_abbrev_table), emit-rtl.c
	(init_emit_once), fold-const.c (mul_double, div_and_round_double),
	function.c (assign_parms), gcse.c (compute_can_copy,
	alloc_gcse_mem, alloc_reg_set_mem, record_one_set,
	compute_hash_table, compute_set_hash_table,
	compute_expr_hash_table), genattrtab.c (optimize_attrs), global.c
	(global_alloc, global_conflicts), haifa-sched.c (compute_trg_info,
	clear_units, schedule_block), integrate.c (initialize_for_inline,
	expand_inline_function), jump.c (thread_jumps), local-alloc.c