@@ -1,5 +1,17 @@
 2000-11-07  Richard Henderson  <rth@redhat.com>
 
+	* dwarfout.c (INSN_LABEL_FMT): Remove.
+	(output_label_die): Use ASM_GENERATE_INTERNAL_LABEL.
+	(dwarfout_label): Remove.
+	* dwarfout.h: Remove it's prototype.
+	* dwarf2out.c (INSN_LABEL_FMT): Remove.
+	(gen_label_die): Use ASM_GENERATE_INTERNAL_LABEL.
+	(dwarf2out_label): Remove.
+	* dwarf2out.h: Remove it's prototype.
+	* final.c (final_scan_insn): Don't call dwarf[2]out_label.
+
+2000-11-07  Richard Henderson  <rth@redhat.com>
+
 	* config/ia64/fde-glibc.c (find_fde_for_dso): Do a binary
 	search on the unwind region section.
 
